sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:9: error: value et is not a member of Boolean
    while (j > 0 et getValeur(j - 1) > v) {
                 ^